# debug-ai

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  VERSION_BUMPING.md  bump_version.py  run_ui_demo.bat
.debugai/: config.yaml
.github/workflows/: bump-version.yml  ci.yml
debugai/: .env.example  MANIFEST.in  PYPI_PUBLISHING.md  SETUP_GUIDE.md  mkdocs.yml  pyproject.toml  run_stress_test.bat
debugai/.debugai/: .gitignore
debugai/.github/workflows/: release.yml
debugai/docs/: README.md  index.md
debugai/docs/guide/: commands.md
debugai/src/debugai/: __init__.py
debugai/src/debugai/ai/: gemini_client.py  prompts.py
debugai/src/debugai/config/: settings.py
debugai/src/debugai/core/: doctor.py  initializer.py
debugai/src/debugai/ingestion/: docker_ingester.py  stream_ingester.py
debugai/src/debugai/ui/: effects.py
docs/: changelog.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
src/debugai/ai/: __init__.py  embeddings.py  gemini_client.py
src/debugai/analysis/: __init__.py  correlator.py  timeline_builder.py
src/debugai/cli/: help_theme.py  main.py
src/debugai/cli/commands/: __init__.py  analyze.py  config.py  explain.py  interactive.py  logs.py  suggest.py  timeline.py
src/debugai/config/: __init__.py
src/debugai/core/: __init__.py  analyzer.py  engine.py  status.py
src/debugai/ingestion/: __init__.py  file_ingester.py  parser.py
src/debugai/storage/: __init__.py  database.py
src/debugai/ui/: __init__.py
tests/: conftest.py  stress_test.py  test_basic.py  ui_demo.py
